2001-04-26  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: handle scm parsing errors

	* src/scm/report.scm: fix bug

	* src/guile/gfec.c: handle NULLs

2001-04-26  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/net-barchart.scm: New file, it is the merger of
	income-expense-graph.scm and net-worth-timeseries.scm.

	* src/scm/report/*.scm: adapt to changed gnc:make-report-anchor.
	
	* src/scm/html-utilities.scm (gnc:make-report-anchor):
	gnc:report-add-child-by-id! is now used inside here. API changed.

2001-04-25  Dave Peticolas  <dave@krondo.com>

	* src/scm/commodity-utilities.scm: fix fixme

	* src/engine/Group.c (xaccGroupGetAccount): remove pokey warning

	* src/engine/gnc-transaction-xml-v2.c: read & write split action
	field

	* src/gnome/druid-commodity.c: do gncFileNew after gncFileQuit

	* src/guile/gnc.gwp: remove pokey functions (not used anymore)

	* src/scm/main.scm: fix bug. don't do new user dialog if we
	have a file on the command line.

	* src/FileDialog.c (gncAddHistory): fix bug. check for NULL.

	* src/guile/gnucash.c.in: include string.h

	* src/gnome/window-main.c: don't restore state for old format files

2001-04-24  Dave Peticolas  <dave@krondo.com>

	* src/scm/options.scm: check for deleted accounts in account
	list option. fix bug.

	* src/scm/report/pnl.scm: filter out non income/expense accounts

	* src/scm/report/budget-report.scm: remove

	* src/scm/qif-import/qif-to-gnc.scm: remove cruft

	* src/engine/Account.c: take out pokey warnings

2001-04-25  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/html-utilities.scm:
	(gnc:html-table-append-ruler/markup!) new function.  Also modify
	(gnc:html-build-acct-table) and other functions to use global row
	styles.

	* src/scm/html-table.scm:(gnc:html-table-prepend-row/markup!)  fix
	bug.  

	* src/scm/report/balance-sheet.scm: use new global row styles.

	* src/scm/report/stylesheet-*.scm: add new global row styles.
